# Uni-Algorithm-Engineering

./: .gitignore  CMakeLists.txt
exercise-1/: Makefile  Stopwatch.h  connectivity.cpp  graph.cpp  graph.fmi  graph.h  main.cpp  queries.txt
exercise-2/: Makefile  ch_graph.cpp  ch_graph.h  graph.fmi  main.cpp  parse_ch_graph_file.cpp  parse_ch_graph_file.h  parse_fmi_graph_file.cpp  parse_fmi_graph_file.h  progressive_dijkstra.cpp  progressive_dijkstra.h
exercise-3/: Exercise1.h  Exercise2.h  Intersect.h  InvertedIndex.cpp  InvertedIndex.h  Makefile  README.md  Stopwatch.h  main.cpp
exercise-4/: Makefile  NaiveSuffixArray.cpp  NaiveSuffixArray.h  README.txt  SuffixArray.cpp  SuffixArray.h  main.cpp  util-trim-wiki-file.cpp
